--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,12 +31,12 @@ jobs:
             ~/.rustup
             ~/.avm
             ~/work/niLang/ham
-          key: ${{ runner.os }}-cargo-ham-${{ hashFiles('**/Cargo.lock') }}
+          key: cache-v2-cargo-ham-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Install Ubuntu packages
         run: |
           sudo apt update
-          DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC sudo apt install -y clang curl ffmpeg freeglut3-dev g++ gcc git libcurl4-openssl-dev lftp libsdl2-dev libssl-dev libudev-dev mesa-common-dev mesa-utils ntpdate p7zip-full pkg-config python3 python3-pip subversion wget xsltproc libdw-dev
+          DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC sudo apt install -y clang curl ffmpeg freeglut3-dev g++ gcc git libcurl4-openssl-dev lftp libsdl2-dev libssl-dev libudev-dev mesa-common-dev mesa-utils ntpdate p7zip-full pkg-config python3 python3-pip subversion wget xsltproc libdw-dev libunwind-dev
 
       - name: Build bootstrap
         run: |
