--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           path: |
             ~/_ham/obj/
             ~/work/niLang/ham
-          key: ${{ runner.os }}-niLang-ham-b2ddd60
+          key: ${{ runner.os }}-niLang-ham-b2a5d4f
 
       - name: Install Ubuntu packages
         run: |
@@ -37,6 +37,10 @@ jobs:
         run: |
           ./_build_bootstrap.sh
 
-      - name: Run_ci
+      - name: Run_ci BUILD=da
         run: |
-          ./_run_ci.sh
+          BUILD=da ./_run_ci.sh
+
+      - name: Run_ci BUILD=ra
+        run: |
+          BUILD=ra ./_run_ci.sh
