--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           path: |
             ~/_ham/obj/
             ~/work/niLang/ham
-          key: ${{ runner.os }}-niLang-cebacf5-ham-ef8718d
+          key: ${{ runner.os }}-niLang-91e4c22-ham-c49020c
 
       - name: Install Ubuntu packages
         run: |
@@ -38,6 +38,7 @@ jobs:
           ./_build_bootstrap.sh
 
       - name: Run_ci BUILD=da
+        continue-on-error: true
         run: |
           BUILD=da ./_run_ci.sh
 
