--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,19 @@
-name: Run CI tests
+name: run_ci
+
+defaults:
+  run:
+    shell: bash
+
+concurrency:
+  group: main-${{ github.head_ref }}
+  cancel-in-progress: true
 
 on:
   # Run on all push in main
   push:
-    branches: [ main ]
+    branches: [ main, master ]
   # Run on all pull requests
   pull_request:
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -26,7 +33,7 @@ jobs:
           path: |
             ~/_ham/obj/
             ~/work/niLang/ham
-          key: ${{ runner.os }}-niLang-91e4c22-ham-c49020c
+          key: ${{ runner.os }}-ham-313cfa2-niLang-60e666c
 
       - name: Install Ubuntu packages
         run: |
