niLang: Cleanup naming "as_/As" when its equivalent to a type cast & "make_/Make" when it allocates a new object ;

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,21 @@
       "type": "lldb",
       "request": "launch",
       "program": "${workspaceFolder}/bin/osx-x64/Test_niLang_da",
-      "args": ["FException"],
+      "args": ["FNonnull-niCheckNonnull_WeakPtr_HasValue"],
       "cwd": "${workspaceFolder}/bin/osx-x64/",
+      "stopAtEntry": false,
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "lldb",
+      "preLaunchTask": "ham Test_niLang (da)"
+    },
+    {
+      "name": "(osx-arm64) Test_niLang_da",
+      "type": "lldb",
+      "request": "launch",
+      "program": "${workspaceFolder}/bin/osx-arm64/Test_niLang_da",
+      "args": ["FNonnull-niCheckNonnull_WeakPtr_HasValue"],
+      "cwd": "${workspaceFolder}/bin/osx-arm64/",
       "stopAtEntry": false,
       "environment": [],
       "externalConsole": false,
