--- a/sources/HelloUI/osx/HelloUI_osx-Info.plist
+++ b/sources/HelloUI/osx/HelloUI_osx-Info.plist
@@ -2,7 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>niAppResourceDirName</key>
-	<string>niLang</string>
+	<key>niAppResourceDir.data</key>
+	<string>niLang/data</string>
+	<key>niAppResourceDir.scripts</key>
+	<string>niLang/scripts</string>
 </dict>
 </plist>
