--- a/sources/HelloUI/ios/HelloUI_ios/HelloUI_ios-Info.plist
+++ b/sources/HelloUI/ios/HelloUI_ios/HelloUI_ios-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>niAppResourceDir.data</key>
+	<string>niLang/data</string>
+	<key>niAppResourceDir.scripts</key>
+	<string>__NONE__</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
