.gitattributes: Add rules to recognize .ni, .niw, and .nip for syntax highlighting.

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,7 @@
 
 # *.png binary
 # *.fbx binary
+
+*.ni linguist-language=Squirrel
+*.niw linguist-language=Squirrel
+*.nip linguist-language=Squirrel
